--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -7,7 +7,7 @@
 h1 
 {
     text-align: center;
-	border : 1px solid #339999;
+	border : 1px solid #4051b5;
 	background-color : #f7f7f7;
     margin : 0 0 10px 30px; /* haut, droite, bas, gauche (respectivement) */
     color : #cc6633;
@@ -19,7 +19,7 @@ h1
 h2
 {
     text-align: center;
-	border : 1px solid #1614a9;
+	border : 1px solid #4051b5;
 	background-color : #f7f7f7;
     margin : 0 0 10px 30px; /* haut, droite, bas, gauche (respectivement) */
     font : 120% georgia, palatino, serif;
