--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -31,3 +31,14 @@ h3
     font : 130% georgia, palatino, serif;
     font-style : italic;
 }
+
+table {
+border: medium solid #4051b5;
+
+}
+
+td, th {
+border: thin solid #6495ed;
+border-collapse: collapse;
+width: 25%;
+}
