--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -47,7 +47,14 @@ td, th {
         width: 25%;
         }
 
-
+table.tabnsi {
+	margin: auto;
+        border: medium solid #6495ed;
+		border-collapse: collapse;
+		width: 50%;
+	font : 120% georgia, palatino, serif;
+    	font-style : italic;
+}
 
 
 
