--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -46,11 +46,11 @@ td, th {
 
 table.tabnsi {
 	margin: auto;
-        border: medium solid #6495ed;
-		border-collapse: collapse;
-		width: 50%;
-	font : 120% georgia, palatino, serif;
-    	font-style : italic;
+    border: medium solid #6495ed;
+	border-collapse: collapse;
+	width: 75%;
+	font : 100% arial, palatino, serif;
+    font-style : normal;
 }
 
 
