--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -4,25 +4,25 @@
   border-left-width: 4px;
 }
 
-h1 
-{
+.md-typeset h1 
+{   color: black;
     text-align: center;
     margin : 0 0 10px 30px; /* haut, droite, bas, gauche (respectivement) */
     font : 200% georgia, palatino, serif;
-    font-style : italic;
+    font-weight: bold;
 }
 
 
-h2
+.md-typeset h2
 {
     text-align: left;
-
-	margin : 0 50px 10px 100px; /* haut, droite, bas, gauche (respectivement) */
+	margin : 0px 0px 10px 10px; /* haut, droite, bas, gauche (respectivement) */
     font : 150% georgia, palatino, serif;
     font-style : normale;
+    font-weight: bold;
 }
 
-h3
+.md-typeset h3
 {
     text-align: left;
 	margin : 0 0 10px 30px; /* haut, droite, bas, gauche (respectivement) */
@@ -39,25 +39,25 @@ table {
         
         
 td, th {
-        
+        border: 1px solid;
         
         }
 
 table.tabnsi {
 	margin: auto;
     border: medium solid #6495ed;
-	border-collapse: collapse;
 	width: 75%;
 	font : 100% arial, palatino, serif;
     font-style : normal;
+    background-color: #f2f2f2;
 }
 table.tabnsi_long {
 	margin: auto;
     border: medium solid #6495ed;
-	border-collapse: collapse;
 	width: 100%;
 	font : 100% arial, palatino, serif;
     font-style : normal;
+    background-color: #f2f2f2;
 }
 
 
