--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -40,12 +40,14 @@ table {
         
 td, th {
         border: 1px solid;
+        padding: 5px;
+        text-align: left;
         
         }
 
 table.tabnsi {
 	margin: auto;
-    border: medium solid #6495ed;
+    border: solid #6495ed;
 	width: 75%;
 	font : 100% arial, palatino, serif;
     font-style : normal;
