--- a/xtra/stylesheets/extra.css
+++ b/xtra/stylesheets/extra.css
@@ -3,24 +3,6 @@
   border-width: 1px;
   border-left-width: 1px;
 }
-:root {
-    --md-admonition-icon--fabquestion: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"/></svg>')
-  }
-  .md-typeset .admonition.fabquestion,
-  .md-typeset details.fabquestion {
-    border-color: rgb(96, 80, 189);
-  }
-  .md-typeset .fabquestion > .admonition-title,
-  .md-typeset .fabquestion > summary {
-    background-color: rgba(96, 80, 189, 0.1);
-    border-color: rgb(96, 80, 189);
-  }
-  .md-typeset .fabquestion > .admonition-title::before,
-  .md-typeset .fabquestion > summary::before {
-    background-color: rgb(96, 80, 189);
-    -webkit-mask-image: var(--md-admonition-icon--fabquestion);
-            mask-image: var(--md-admonition-icon--fabquestion);
-  }
   
 .md-typeset h1 
 {   color: darkred;
@@ -42,16 +24,20 @@
 
 .md-typeset h3
 { 
-    color: darkblue;
+    color: darkred;
     text-align: left;
-	margin : 0 0 10px 30px; /* haut, droite, bas, gauche (respectivement) */
+	margin : 0 0 10px 10px; /* haut, droite, bas, gauche (respectivement) */
     font : 120% georgia, palatino, serif;
     font-style : oblique 40deg;
 }
 
 table {
         margin: auto;
-        
+        border: solid black;
+		width: 75%;
+		font : 100% arial, palatino, serif;
+		font-style : normal;
+		background-color: #f2f2f2;
 		width: 80%;
 		}
 
@@ -63,21 +49,40 @@ td, th {
         text-align: left;
         
         }
-
-table.tabnsi {
-	margin: auto;
-    border: solid black;
-	width: 75%;
-	font : 100% arial, palatino, serif;
-    font-style : normal;
-    background-color: #f2f2f2;
-}
-table.tabnsi_long {
-	margin: auto;
-    border: medium solid black;
-	width: 100%;
-	font : 100% arial, palatino, serif;
-    font-style : normal;
-    background-color: #f2f2f2;
+        
+/* ex - exo - EXERCICES */
+:root {
+  /* --md-admonition-icon--ex: url('data:image/svg+xml;charset=utf-8,<svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="steam-symbol" class="svg-inline--fa fa-steam-symbol fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M395.5 177.5c0 33.8-27.5 61-61 61-33.8 0-61-27.3-61-61s27.3-61 61-61c33.5 0 61 27.2 61 61zm52.5.2c0 63-51 113.8-113.7 113.8L225 371.3c-4 43-40.5 76.8-84.5 76.8-40.5 0-74.7-28.8-83-67L0 358V250.7L97.2 290c15.1-9.2 32.2-13.3 52-11.5l71-101.7c.5-62.3 51.5-112.8 114-112.8C397 64 448 115 448 177.7zM203 363c0-34.7-27.8-62.5-62.5-62.5-4.5 0-9 .5-13.5 1.5l26 10.5c25.5 10.2 38 39 27.7 64.5-10.2 25.5-39.2 38-64.7 27.5-10.2-4-20.5-8.3-30.7-12.2 10.5 19.7 31.2 33.2 55.2 33.2 34.7 0 62.5-27.8 62.5-62.5zm207.5-185.3c0-42-34.3-76.2-76.2-76.2-42.3 0-76.5 34.2-76.5 76.2 0 42.2 34.3 76.2 76.5 76.2 41.9.1 76.2-33.9 76.2-76.2z"></path></svg>'); */
+  --md-admonition-icon--ex: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="m512.1 191-8.2 14.3c-3 5.3-9.4 7.5-15.1 5.4-11.8-4.4-22.6-10.7-32.1-18.6-4.6-3.8-5.8-10.5-2.8-15.7l8.2-14.3c-6.9-8-12.3-17.3-15.9-27.4h-16.5c-6 0-11.2-4.3-12.2-10.3-2-12-2.1-24.6 0-37.1 1-6 6.2-10.4 12.2-10.4h16.5c3.6-10.1 9-19.4 15.9-27.4l-8.2-14.3c-3-5.2-1.9-11.9 2.8-15.7 9.5-7.9 20.4-14.2 32.1-18.6 5.7-2.1 12.1.1 15.1 5.4l8.2 14.3c10.5-1.9 21.2-1.9 31.7 0L552 6.3c3-5.3 9.4-7.5 15.1-5.4 11.8 4.4 22.6 10.7 32.1 18.6 4.6 3.8 5.8 10.5 2.8 15.7l-8.2 14.3c6.9 8 12.3 17.3 15.9 27.4h16.5c6 0 11.2 4.3 12.2 10.3 2 12 2.1 24.6 0 37.1-1 6-6.2 10.4-12.2 10.4h-16.5c-3.6 10.1-9 19.4-15.9 27.4l8.2 14.3c3 5.2 1.9 11.9-2.8 15.7-9.5 7.9-20.4 14.2-32.1 18.6-5.7 2.1-12.1-.1-15.1-5.4l-8.2-14.3c-10.4 1.9-21.2 1.9-31.7 0zm-10.5-58.8c38.5 29.6 82.4-14.3 52.8-52.8-38.5-29.7-82.4 14.3-52.8 52.8zM386.3 286.1l33.7 16.8c10.1 5.8 14.5 18.1 10.5 29.1-8.9 24.2-26.4 46.4-42.6 65.8-7.4 8.9-20.2 11.1-30.3 5.3l-29.1-16.8c-16 13.7-34.6 24.6-54.9 31.7v33.6c0 11.6-8.3 21.6-19.7 23.6-24.6 4.2-50.4 4.4-75.9 0-11.5-2-20-11.9-20-23.6V418c-20.3-7.2-38.9-18-54.9-31.7L74 403c-10 5.8-22.9 3.6-30.3-5.3-16.2-19.4-33.3-41.6-42.2-65.7-4-10.9.4-23.2 10.5-29.1l33.3-16.8c-3.9-20.9-3.9-42.4 0-63.4L12 205.8c-10.1-5.8-14.6-18.1-10.5-29 8.9-24.2 26-46.4 42.2-65.8 7.4-8.9 20.2-11.1 30.3-5.3l29.1 16.8c16-13.7 34.6-24.6 54.9-31.7V57.1c0-11.5 8.2-21.5 19.6-23.5 24.6-4.2 50.5-4.4 76-.1 11.5 2 20 11.9 20 23.6v33.6c20.3 7.2 38.9 18 54.9 31.7l29.1-16.8c10-5.8 22.9-3.6 30.3 5.3 16.2 19.4 33.2 41.6 42.1 65.8 4 10.9.1 23.2-10 29.1l-33.7 16.8c3.9 21 3.9 42.5 0 63.5zm-117.6 21.1c59.2-77-28.7-164.9-105.7-105.7-59.2 77 28.7 164.9 105.7 105.7zm243.4 182.7-8.2 14.3c-3 5.3-9.4 7.5-15.1 5.4-11.8-4.4-22.6-10.7-32.1-18.6-4.6-3.8-5.8-10.5-2.8-15.7l8.2-14.3c-6.9-8-12.3-17.3-15.9-27.4h-16.5c-6 0-11.2-4.3-12.2-10.3-2-12-2.1-24.6 0-37.1 1-6 6.2-10.4 12.2-10.4h16.5c3.6-10.1 9-19.4 15.9-27.4l-8.2-14.3c-3-5.2-1.9-11.9 2.8-15.7 9.5-7.9 20.4-14.2 32.1-18.6 5.7-2.1 12.1.1 15.1 5.4l8.2 14.3c10.5-1.9 21.2-1.9 31.7 0l8.2-14.3c3-5.3 9.4-7.5 15.1-5.4 11.8 4.4 22.6 10.7 32.1 18.6 4.6 3.8 5.8 10.5 2.8 15.7l-8.2 14.3c6.9 8 12.3 17.3 15.9 27.4h16.5c6 0 11.2 4.3 12.2 10.3 2 12 2.1 24.6 0 37.1-1 6-6.2 10.4-12.2 10.4h-16.5c-3.6 10.1-9 19.4-15.9 27.4l8.2 14.3c3 5.2 1.9 11.9-2.8 15.7-9.5 7.9-20.4 14.2-32.1 18.6-5.7 2.1-12.1-.1-15.1-5.4l-8.2-14.3c-10.4 1.9-21.2 1.9-31.7 0zM501.6 431c38.5 29.6 82.4-14.3 52.8-52.8-38.5-29.6-82.4 14.3-52.8 52.8z"/></svg>');
+  --md-admonition-icon--exo: var(--md-admonition-icon--ex);
+  --md-admonition-icon--exercice: var(--md-admonition-icon--ex);
 }
 
+.md-typeset .admonition.ex,
+.md-typeset details.ex,
+.md-typeset .admonition.exo,
+.md-typeset details.exo,
+.md-typeset .admonition.exercice,
+.md-typeset details.exercice {
+  border-color: rgb(255, 188, 81);
+}
+
+.md-typeset .ex > .admonition-title,
+.md-typeset .ex > summary,
+.md-typeset .exo > .admonition-title,
+.md-typeset .exo > summary,
+.md-typeset .exercice > .admonition-title,
+.md-typeset .exercice > summary {
+  background-color: rgba(255, 188, 81, 0.25);
+  border-color: rgb(255, 188, 81);
+}
+
+.md-typeset .ex > .admonition-title::before,
+.md-typeset .ex > summary::before,
+.md-typeset .exo > .admonition-title::before,
+.md-typeset .exo > summary::before,
+.md-typeset .exercice > .admonition-title::before,
+.md-typeset .exercice > summary::before {
+  background-color: rgb(253, 167, 28);
+  mask-image: var(--md-admonition-icon--ex);
+}
